# bot

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  biome.json  cliff.toml  lefthook.yml  license  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  doc-deploy.yml  docs-deploy.yml  release-crates.yml  release-desktop.yml  release.yml
aumate-app/: CLAUDE.md  FIXES.md  IMPLEMENTATION_STATUS.md  SCREENSHOT_FEATURE.md  package.json  screenshot.html  settings.html  vite.config.ts
aumate-app/.claude/: settings.local.json
aumate-app/pages/: README.md  commandpalette.html  draw.html  elementscan.html  index.html  screenshot.html  settings.html
aumate-app/src/: App.tsx  draw-main.tsx  index.css  screenshot-main.tsx  settings-main.tsx
aumate-app/src-tauri/: Cargo.toml  tauri.conf.json
aumate-app/src-tauri/capabilities/: default.json
aumate-app/src-tauri/examples/: test_xcap.rs
aumate-app/src-tauri/src/: lib.rs  main.rs  setup.rs  shortcut_parser.rs  state.rs
aumate-app/src-tauri/src/commands/: clipboard.rs  draw.rs  element_scanner.rs  frontend_log.rs  hotkey.rs  mod.rs  page.rs  permissions.rs  screenshot.rs  scroll.rs  settings.rs  ui.rs  ui_control.rs  window.rs
aumate-app/src-tauri/src/screenshot/: capture.rs  encode.rs  mod.rs  types.rs
aumate-app/src-tauri/src/ui_automation/: linux.rs  macos.rs  mod.rs  windows.rs
aumate-app/src/components/: App.tsx  CommandPalette.tsx
aumate-app/src/constants/: defaults.ts  dimensions.ts  index.ts  prompts.ts
aumate-app/src/entries/: commandpalette.tsx  draw.tsx  elementscan.tsx  screenshot.tsx  settings.tsx
aumate-app/src/hooks/: useStatePublisher.tsx  useWindowResize.ts
aumate-app/src/lib/: dialogue.ts  openai.ts  streaming.ts  window.ts
aumate-app/src/services/: index.ts  window.ts
aumate-app/src/stores/: dialogueStore.ts  settingsStore.ts
aumate-app/src/types/: dialogue.ts  index.ts  window.ts
aumate-app/src/utils/: logger.ts
crates/api/: Cargo.toml
crates/api/src/: lib.rs  setup.rs  state.rs
crates/api/src/commands/: hotkey.rs  mod.rs  monitor.rs  page.rs  screenshot.rs  ui.rs  window.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/dto/: clipboard.rs  element_scanner.rs  mod.rs  monitor.rs  screenshot.rs  scroll.rs  storage.rs  window.rs  window_list.rs
crates/application/src/use_cases/: clipboard.rs  element_scanner.rs  global_shortcut.rs  mod.rs  monitor.rs  screenshot.rs  scroll.rs  settings.rs  window.rs  window_layout.rs  window_list.rs  window_vibrancy.rs
crates/core/domain/: Cargo.toml
crates/core/shared/: Cargo.toml
crates/core/traits/: Cargo.toml
crates/docs/: ARCHITECTURE.md  COMMANDS_CHANGELOG.md  PHASE1_2_COMPLETION_REPORT.md  README.md
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/adapters/: clipboard.rs  element_scanner.rs  global_shortcut.rs  hotkey.rs  image.rs  mod.rs  page.rs  screen_capture.rs  scroll.rs  settings.rs  storage.rs  ui_automation.rs  window.rs  window_layout.rs  window_list.rs  window_vibrancy.rs
crates/infrastructure/src/platform/: mod.rs  shared.rs
crates/infrastructure/src/platform/linux/: mod.rs  ui_automation.rs
crates/infrastructure/src/platform/macos/: mod.rs  notification.rs  ui_automation.rs  utils.rs  window_list.rs
crates/infrastructure/src/platform/windows/: element_scanner.rs  mod.rs  ui_automation.rs
crates/infrastructure/src/services/: device_events.rs  input_simulation.rs  key_listener.rs  mod.rs  mouse_listener.rs
crates/infrastructure/src/services/page/: hot_load_page_service.rs  mod.rs
crates/infrastructure/src/services/scroll/: mod.rs  scroll_screenshot_capture_service.rs  scroll_screenshot_image_service.rs  scroll_screenshot_service.rs
crates/infrastructure/src/utils/: mod.rs  monitor_info.rs
docs/: README.md  autohotkey-api-reference.md  hammerspoon-api-reference.md  index.md  python-automation-libraries.md  rust-2024-edition-migration.md  screenshot-api.md
docs/.vitepress/: config.mts
docs/api/: README.md  globals.md  index.md
docs/api/classes/: ScreenshotTool.md
docs/api/functions/: bitmapColorAt.md  button.md  captureAndCopy.md  captureAndSave.md  captureRegion.md  captureScreen.md  captureScreenRegion.md  checkbox.md  clearClipboard.md  copyScreenshotToClipboard.md  doubleClick.md  dragMouse.md  dropdown.md  findAllInRegion.md  findAllOnScreen.md  findInRegion.md  findOnScreen.md  findWindowsByProcess.md  findWindowsByTitle.md  getActiveWindow.md  getAllWindows.md  getClipboard.md  getClipboardImage.md  getMatchBounds.md  getMatchCenter.md  getMousePos.md  getPixelColor.md  getPixelColorHex.md  getScreen.md  getScreenSize.md  grid.md  group.md  hbox.md  image.md  imageResource.md  imageResourceFromBuffer.md  imageResourceSync.md  keyTap.md  keyToggle.md  label.md  (+37 more)
docs/api/interfaces/: Bitmap.md  ColorInfo.md  ColorPickerOptions.md  HslColor.md  ImageResource.md  InteractiveCaptureOptions.md  MatchConfig.md  MatchResult.md  MousePosition.md  Position.md  RgbColor.md  RgbaColor.md  SaveImageOptions.md  ScreenCapture.md  ScreenRegion.md  ScreenSize.md  ScreenshotResult.md  ScreenshotToolOptions.md  TabDef.md  WindowInfo.md
docs/api/type-aliases/: PixelColor.md  WidgetStyle.md
docs/api/variables/: Keyboard.md  Mouse.md  Screen.md
docs/developments/: alternatives.md  architecture.md  aumate-roadmap.md  index.md  roadmap.md  rust-2024-edition-migration.md  rust-2024-features-analysis.md
docs/guide/: getting-started.md
examples/: package.json  runExample.ts  screenshot-advanced-example.ts  screenshot-basic-example.ts  screenshot-color-picker-example.ts  tsconfig.json
examples/src/: basic.ts  clipboard.ts  gui-file-dialogs.ts  gui-font-picker.ts  gui-interactive-widgets.ts  mouse-shortcuts.ts  screenshot-advanced.ts  screenshot-basic.ts  screenshot-color-picker.ts  window.ts
scripts/: build-macos-app.sh
(+85 files in other folders)
