[workspace]
resolver = "3"
members = [
    "packages/bot",
    "aumate-app/src-tauri",
    "packages/aumate",
    "crates/core/shared",
    "crates/core/domain",
    "crates/core/traits",
    "crates/infrastructure",
    "crates/application"
]

[workspace.dependencies]
# Node.js bindings
napi = { version = "3.5.2", default-features = false, features = ["async"] }
napi-derive = "3.3.3"
napi-build = "2.3.1"

# Input control
enigo = "0.6.1"

# Screen capture
xcap = "0.7.1"

# Window management
winit = "0.30.12"
raw-window-handle = "0.6.2"
active-win-pos-rs = "0.9.1"

# UI framework
egui = "0.33.2"
egui-winit = "0.33.2"
egui-wgpu = "0.33.2"

# Rendering backend
wgpu = "27.0.1"

# Image processing
image = "0.25.9"
imageproc = "0.25.0"
resvg = "0.45.1"
tiny-skia = "0.11.4"

# Font rendering
fontdue = "0.9.3"

# Clipboard
arboard = "3.6.1"

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Time handling
chrono = { version = "0.4.42", features = ["serde"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
once_cell = "1.21.3"
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"
base64 = "0.22.1"
dirs = "6.0.0"
rayon = "1.11.0"

# tauri
tauri = "2.9.5"
tauri-plugin-opener = "2.5.2"
window-vibrancy = "0.7.1"
tauri-build = "2.5.3"
tauri-plugin-global-shortcut = "2.3.1"
macos-accessibility-client = "0.0.1"
uiautomation = "0.24.2"
windows = "0.62.2"

# Random & noise
rand = "0.9.2"
noise = "0.9.0"

# UUID
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Regex for pattern matching
regex = "1.11"

# Cryptographic hashing
sha2 = "0.10"

# Audio capture
cpal = "0.15"
hound = "3.5"

# Machine Learning (Candle)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }

# ONNX Runtime for VAD
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries"] }
ndarray = "0.16"

# HTTP client for model downloads
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

# Menu & tray
muda = "0.17.1"
tray-icon = "0.21.2"

# File dialog
rfd = "0.16.0"
pollster = "0.4.0"

# Font enumeration
font-kit = "0.14"

# Math
glam = "0.30.9"

# Byte order conversion
byteorder = "1.5"

# macOS specific
objc = "0.2.7"

# From crates workspace - additional dependencies
async-trait = "0.1"
tracing = "0.1"
fast_image_resize = { version = "5.2", features = ["rayon"] }
dashmap = "6.1"
hora = "0.1.1"
cocoa = "0.25"
core-graphics = "0.23"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
device_query = { git = "https://github.com/mg-chao/device_query", branch = "custom/master" }

# Local crates as workspace dependencies
aumate-core-shared = { path = "crates/core/shared" }
aumate-core-domain = { path = "crates/core/domain" }
aumate-core-traits = { path = "crates/core/traits" }
aumate-infrastructure = { path = "crates/infrastructure" }
aumate-application = { path = "crates/application" }

# Dev dependencies
tokio-test = "0.4.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
