[package]
name = "aumate-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aumate_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7.1"
dirs = "5"
log = "0.4"
tokio = { version = "1", features = ["sync", "fs"] }

# Screenshot dependencies
xcap = "0.0.14"
image = { version = "0.25", features = ["png", "webp", "jpeg"] }
imageproc = "0.25"
rayon = "1.10"
base64 = "0.22"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
uiautomation = "0.24"
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Accessibility"
] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

