[package]
name = "aumate-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Zhang Lin sealday@gmail.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aumate_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
window-vibrancy = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }

# Screenshot dependencies
xcap = { workspace = true }
image = {  workspace = true,  features = ["png", "webp", "jpeg"] }
imageproc = { workspace = true }
rayon =  { workspace = true }
base64 = { workspace = true }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = { workspace = true }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
uiautomation = { workspace = true }
windows = { workspace = true, features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Accessibility"
] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = { workspace = true }

# Aumate crates dependencies
[dependencies.aumate-api]
workspace = true

[dependencies.aumate-application]
workspace = true

[dependencies.aumate-infrastructure]
workspace = true

[dependencies.aumate-core-shared]
workspace = true

[dependencies.aumate-core-domain]
workspace = true

[dependencies.aumate-core-traits]
workspace = true 

