[package]
name = "aumate-application"
version = "0.3.0"
edition = "2024"

[dependencies]
# Core dependencies
aumate-core-shared = { workspace = true }
aumate-core-domain = { workspace = true }
aumate-core-traits = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

