[package]
name = "aumate-infrastructure"
version = "0.3.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }

aumate-core-shared = { workspace = true }
aumate-core-traits = { workspace = true }
aumate-core-domain = { workspace = true }

# Image processing
image = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }
fast_image_resize = { workspace = true }

# Tauri
tauri = { workspace = true }

# Device Events & Input
device_query = { workspace = true }
enigo = { workspace = true }

# Concurrency
dashmap = { workspace = true }
once_cell = { workspace = true }

# Clipboard
arboard = { workspace = true }

# 滚动截图依赖
hora = { workspace = true }

# 已内联，无需外部依赖

# Platform specific (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = { workspace = true }
cocoa = { workspace = true }
core-graphics = { workspace = true }
core-foundation = { workspace = true }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
xcap = { workspace = true }
active-win-pos-rs = { workspace = true }

# Platform specific (Windows)
[target.'cfg(windows)'.dependencies]
uiautomation = { workspace = true }
windows = { workspace = true }
xcap = { workspace = true }
active-win-pos-rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

